--- a/auction_system.html
+++ b/auction_system.html
@@ -292,7 +292,7 @@
             </div>
             <button class="btn" onclick="loginAdmin()">Login as Admin</button>
             <p style="color: #999; font-size: 0.85em; margin-top: 10px;">
-                Default password: <strong>super-admin</strong> (Change this in the code)
+                <!-- Default password: <strong>super-admin</strong> (Change this in the code) -->
             </p>
         </div>
 
